fixed button spacing

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -18,3 +18,9 @@
 @import "bootstrap-sprockets"
 body 
   padding-top: 70px
+
+.form-inline > *
+  margin-right: 15px 
+
+.control-label
+  margin-right: 15px
